<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.tarea1.fragments.LoginFragment"
        android:label="@string/btn_iniciar_sesion" tools:layout="@layout/fragment_login" >

        <action
            android:id="@+id/action_login_to_tabFragment"
            app:destination="@id/tabFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true"/>

        <action
            android:id="@+id/action_login_to_register"
            app:destination="@id/registerFragment" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.tarea1.fragments.RegisterFragment"
        android:label="@string/btn_crear_cuenta" tools:layout="@layout/fragment_register" >

        <action
            android:id="@+id/action_register_to_tabFragment"
            app:destination="@id/tabFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true"/>

        <action
            android:id="@+id/action_register_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/tabFragment"
        android:name="com.example.tarea1.fragments.TabFragment"
        android:label="@string/title_tabs" tools:layout="@layout/fragment_tab" />

    <fragment
        android:id="@+id/contactFragment"
        android:name="com.example.tarea1.fragments.ContactFragment"
        android:label="@string/contact"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/preferencesFragment"
        android:name="com.example.tarea1.fragments.PreferencesFragment"
        android:label="@string/preferences"
        tools:layout="@layout/fragment_preferences" />


</navigation>