<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <EditText
        android:id="@+id/etDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_hint_title"
        android:inputType="textCapSentences" />

    <EditText
        android:id="@+id/etDialogDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/dialog_hint_description"
        android:inputType="textCapSentences|textMultiLine"
        android:minLines="3" />

    <CheckBox
        android:id="@+id/cbDialogFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/dialog_label_favorite" />

</LinearLayout>
