<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp">

    <TextView
        android:id="@+id/tvContact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Imagen: misma posición y tamaño que en LoginFragment -->
    <ImageView
        android:id="@+id/ivContactImage"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:scaleType="centerCrop"
        android:src="@drawable/splashscreen"
        android:contentDescription="@string/app_image"
        app:layout_constraintTop_toBottomOf="@id/tvContact"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />




    <VideoView
        android:id="@+id/videoView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"

        app:layout_constraintTop_toBottomOf="@id/ivContactImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintWidth_percent="0.35"
        app:layout_constraintDimensionRatio="9:16" />



    <Button
        android:id="@+id/btnCall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/contact_call"
        app:layout_constraintTop_toBottomOf="@id/videoView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnWhatsApp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/contact_whatsapp"
        app:layout_constraintTop_toBottomOf="@id/btnCall"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"/>

    <Button
        android:id="@+id/btnEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/contact_email"
        app:layout_constraintTop_toBottomOf="@id/btnWhatsApp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
